--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <%= render 'layouts/messages' %>
     <%= yield %>
+    <br/>
+    <br/>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
