--- a/app/views/realisateurs/index.html.erb
+++ b/app/views/realisateurs/index.html.erb
@@ -1,7 +1,8 @@
+<div class="center jumbotron">
 <h1> Tous les Réalisateurs</h1>
 
 <p>
-<%= link_to "Ajouter un nouvel réalisateur", new_realisateur_path%>
+<%= link_to "  Ajouter un nouvel réalisateur", new_realisateur_path, class: "btn btn-primary glyphicon glyphicon-plus btn-xlarge"%>
 </p>
 
 <table>
@@ -21,3 +22,4 @@
   <%end%>
 
 </table>
+</div>
