--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
   </head>
 
   <body>
+    <%= render 'layouts/navigation' %>
     <%= render 'layouts/messages' %>
+    <div class="container">
     <%= yield %>
+    </div>
     <br/>
     <br/>
     <%= debug(params) if Rails.env.development? %>
