--- a/app/views/programmes/index.html.erb
+++ b/app/views/programmes/index.html.erb
@@ -1,7 +1,7 @@
-<h1> Tous les Programmes</h1>
-
+<div class="center jumbotron">
+  <h1>Tous les Programmes</h1>
 <p>
-<%= link_to "Ajouter un nouvel programme", new_programme_path%>
+<%= link_to "  Ajouter un nouvel programme", new_programme_path, class: "btn btn-primary glyphicon glyphicon-plus btn-xlarge"%>
 </p>
 
 <table>
@@ -25,3 +25,5 @@
   <%end%>
 
 </table>
+
+</div>
