--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,10 +23,10 @@
   background-color: #f6f6f8;
 }
 
-.jumbotron h1 {
+.jumbotron h2 {
   color: #7db343;
-  text-align: center;
-  margin-bottom: 30px;
+  text-align: left;
+  margin-bottom: 10px;
   letter-spacing: -1px;
   font-weight: bold;
   margin-top: -20px;
@@ -35,4 +35,15 @@
 .btn-xlarge {
   word-spacing: -8px;
   text-align: center;
+  margin-bottom: 10px;
+  margin-top: -20px;
+}
+
+.btn-add{
+  text-align: right;
+}
+
+.tb{
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
