--- a/app/views/layouts/_formRealisateur.html.erb
+++ b/app/views/layouts/_formRealisateur.html.erb
@@ -7,17 +7,29 @@
 </ul>
 <%end%>
 
-<%= form_for @realisateur do |f| %>
+<div class="row">
+  <div class="col-md-12">
+    <%= form_for @realisateur, html: {class: "form-horizontal", role: "form"} do |f| %>
 
-<p>
-<%= f.label :nom %><br/>
-<%= f.text_field :nom %>
-</p>
+    <div class="form-group">
+      <div class="control-label col-sm-2">
+        <%= f.label :nom %>
+      </div>
 
-<p>
-<%= f.submit %>
-</p>
+      <div class="col-sm-10">
+        <%= f.text_field :nom, class: "form-control", autofocus: true %>
+      </div>
+    </div>
 
-<% end%>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit class: 'btn btn-primary btn-lg' %>
+      </div>
+    </div>
 
-<%= link_to "Tous les réalisateurs", realisateurs_path %>
+    <% end%>
+    <div class="col-xs-offset-4 col-xs-4">
+      [<%= link_to "Tous les réalisateurs", realisateurs_path %>]
+    </div>
+  </div>
+</div>
