--- a/app/views/programmes/edit.html.erb
+++ b/app/views/programmes/edit.html.erb
@@ -1,3 +1,13 @@
-<h1> Modifier le Programme</h1>
+<div class="center jumbotron">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2>
+        Modifier le Programme
+      </h2>
+    </div>
+  </div>
+
 
 <%= render 'layouts/formProgramme' %>
+
+</div>
