--- a/app/views/programmes/index.html.erb
+++ b/app/views/programmes/index.html.erb
@@ -1,29 +1,42 @@
 <div class="center jumbotron">
-  <h1>Tous les Programmes</h1>
-<p>
-<%= link_to "  Ajouter un nouvel programme", new_programme_path, class: "btn btn-primary glyphicon glyphicon-plus btn-xlarge"%>
-</p>
+  <div class="row">
+    <div class="col-sm-6">
+      <h2> Tous les Programmes</h2>
+    </div>
 
-<table>
-  <tr>
-    <th># id </th>
-    <th> Titre </th>
-    <th> Type </th>
-    <th> Classification </th>
-  </tr>
+    <div class="col-sm-6 btn-add">
+      <%= link_to "    Ajouter un nouvel programme", new_programme_path, class: "btn btn-primary glyphicon glyphicon-plus btn-xlarge"%>
+    </div>
+  </div>
 
+
+
+<table class="table tb">
+  <thead>
+    <tr>
+      <th># id </th>
+      <th> Titre </th>
+      <th> Type </th>
+      <th> Classification </th>
+      <th>  </th>
+      <th>  </th>
+      <th>  </th>
+    </tr>
+  </thead>
+
+  <tbody>
   <% @programmes.each do |programme| %>
-  <tr>
-    <td> <%= programme.id %> </td>
-    <td> <%= programme.titre %> </td>
-    <td> <%= programme.type_programme %> </td>
-    <td> <%= programme.classification %> </td>
-    <td> <%= link_to "Afficher", programme_path(programme) %>  </td>
-    <td>  | <%= link_to "Modifier", edit_programme_path(programme) %>  </td>
-    <td>  | <%= link_to "Supprimer", programme_path(programme), method: :delete, data: {confirm: "Êtes-vous sûr?"} %> </td>
-  </tr>
+    <tr>
+      <td> <%= programme.id %> </td>
+      <td> <%= programme.titre %> </td>
+      <td> <%= programme.type_programme %> </td>
+      <td> <%= programme.classification %> </td>
+      <td>  | <%= link_to "Afficher", programme_path(programme) %>  </td>
+      <td>  | <%= link_to "Modifier", edit_programme_path(programme) %>  </td>
+      <td>  | <%= link_to "Supprimer", programme_path(programme), method: :delete, data: {confirm: "Êtes-vous sûr?"} %> </td>
+    </tr>
+  </tbody>
   <%end%>
-
 </table>
 
 </div>
