--- a/app/views/programmes/new.html.erb
+++ b/app/views/programmes/new.html.erb
@@ -1,5 +1,9 @@
 <div class="center jumbotron">
-<h1> Ajouter un nouvel Programme</h1>
+  <div class="row">
+    <div class="col-sm-6">
+      <h2> Ajouter un nouvel Programme</h2>
+    </div>
+</div>
 
 <%= render 'layouts/formProgramme' %>
 </div>
