--- a/app/views/programmes/show.html.erb
+++ b/app/views/programmes/show.html.erb
@@ -1,16 +1,60 @@
-<h1> Présentation du Programme</h1>
+<div class="center jumbotron">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2>
+        Information sur le Programme
+      </h2>
+    </div>
 
-<p>
-Titre: <%= @programme.titre%>
-</p>
+    <div class="col-sm-6 btn-add">
+      <%= link_to "    Modifier le programme", edit_programme_path(@programme), class: "btn btn-primary glyphicon glyphicon-pencil btn-xlarge"%>
+    </div>
+  </div>
 
-<p>
-Type: <%= @programme.type_programme%>
-</p>
 
-<p>
-Classification: <%= @programme.classification%>
-</p>
+  <div class="row">
+    <div class="col-md-12">
+      <%= form_for @programme, html: {class: "form-horizontal", role: "form"} do |f| %>
 
-<%= link_to "Tous les programmes", programmes_path %>
-<%= link_to "Modifier", edit_programme_path(@programme) %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :titre %>
+        </div>
+
+        <div class="col-sm-10">
+          <%= f.text_field :titre, class: "form-control", disabled: true %>
+        </div>
+      </div>
+
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :type_programme %>
+        </div>
+
+        <div class="col-sm-10">
+          <%= f.text_field :type_programme, class: "form-control", disabled: true %>
+        </div>
+      </div>
+
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :classification %>
+        </div>
+
+        <div class="col-sm-10">
+          <%= f.text_field :classification, class: "form-control", disabled: true %>
+        </div>
+      </div>
+
+
+
+      <% end%>
+      <div class="col-xs-offset-4 col-xs-4">
+        [<%= link_to "Tous les programmes", programmes_path %>]
+      </div>
+
+    </div>
+  </div>
+</div>
