--- a/app/views/realisateurs/index.html.erb
+++ b/app/views/realisateurs/index.html.erb
@@ -1,25 +1,35 @@
 <div class="center jumbotron">
-<h1> Tous les Réalisateurs</h1>
+  <div class="row">
+    <div class="col-sm-6">
+      <h2> Tous les Réalisateurs</h2>
+    </div>
 
-<p>
-<%= link_to "  Ajouter un nouvel réalisateur", new_realisateur_path, class: "btn btn-primary glyphicon glyphicon-plus btn-xlarge"%>
-</p>
+    <div class="col-sm-6 btn-add">
+      <%= link_to "    Ajouter un nouvel réalisateur", new_realisateur_path, class: "btn btn-primary glyphicon glyphicon-plus btn-xlarge"%>
+    </div>
+</div>
 
-<table>
-  <tr>
-    <th># id </th>
-    <th> Nom </th>
-  </tr>
+<table class="table tb">
+  <thead>
+    <tr>
+      <th># id </th>
+      <th> Nom </th>
+      <th>  </th>
+      <th>  </th>
+      <th>  </th>
+    </tr>
+  </thead>
 
-  <% @realisateurs.each do |realisateur| %>
-  <tr>
-    <td> <%= realisateur.id %> </td>
-    <td> <%= realisateur.nom %> </td>
-    <td> <%= link_to "Afficher", realisateur_path(realisateur) %>  </td>
-    <td>  | <%= link_to "Modifier", edit_realisateur_path(realisateur) %>  </td>
-    <td>  | <%= link_to "Supprimer", realisateur_path(realisateur), method: :delete, data: {confirm: "Êtes-vous sûr?"} %> </td>
-  </tr>
+  <tbody>
+    <% @realisateurs.each do |realisateur| %>
+    <tr>
+      <td> <%= realisateur.id %> </td>
+      <td> <%= realisateur.nom %> </td>
+      <td>  | <%= link_to "Afficher", realisateur_path(realisateur) %>  </td>
+      <td>  | <%= link_to "Modifier", edit_realisateur_path(realisateur) %>  </td>
+      <td>  | <%= link_to "Supprimer", realisateur_path(realisateur), method: :delete, data: {confirm: "Êtes-vous sûr?"} %> </td>
+    </tr>
   <%end%>
-
+  </tbody>
 </table>
 </div>
