--- a/app/views/realisateurs/new.html.erb
+++ b/app/views/realisateurs/new.html.erb
@@ -1,3 +1,8 @@
-<h1> Ajouter un nouvel Réalisateur</h1>
+<div class="center jumbotron">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2> Ajouter un nouvel Réalisateur</h2>
+    </div>
+</div>
 
 <%= render 'layouts/formRealisateur' %>
