--- a/app/views/realisateurs/show.html.erb
+++ b/app/views/realisateurs/show.html.erb
@@ -1,8 +1,33 @@
-<h1> Présentation du Réalisateur</h1>
+<div class="center jumbotron">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2> Information sur le Réalisateur</h2>
+    </div>
 
-<p>
-Nom: <%= @realisateur.nom%>
-</p>
+    <div class="col-sm-6 btn-add">
+      <%= link_to "    Modifier le réalisateur", edit_realisateur_path(@realisateur), class: "btn btn-primary glyphicon glyphicon-pencil btn-xlarge"%>
+    </div>
+  </div>
 
-<%= link_to "Tous les réalisateurs", realisateurs_path %>
-<%= link_to "Modifier", edit_realisateur_path(@realisateur) %>
+  <div class="row">
+    <div class="col-md-12">
+      <%= form_for @realisateur, html: {class: "form-horizontal", role: "form"} do |f| %>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :nom %>
+        </div>
+
+        <div class="col-sm-10">
+          <%= f.text_field :nom, class: "form-control", disabled: true %>
+        </div>
+      </div>
+
+      <% end%>
+      <div class="col-xs-offset-4 col-xs-4">
+        [<%= link_to "Tous les réalisateur", realisateurs_path %>]
+      </div>
+
+    </div>
+  </div>
+</div>
