--- a/app/views/layouts/_formProgramme.html.erb
+++ b/app/views/layouts/_formProgramme.html.erb
@@ -29,8 +29,18 @@
       </div>
 
       <div class="col-sm-10">
-        <%= f.text_field :type_programme, class: "form-control", autofocus: true %>
+        <%= f.select :type_programme, options_for_select([['Action', 'Action'],
+          ['Adventure','Adventure'],
+          ['Crime','Crime'],
+          ['Drama','Drama'],
+          ['Fantasy','Fantasy'],
+          ['Historical','Historical'],
+          ['Horror','Horror'],
+          ['Romance','Romance'],
+          ['Social','Social']]), class: "form-control", autofocus: true%>
       </div>
+
+
     </div>
 
 
@@ -40,7 +50,21 @@
       </div>
 
       <div class="col-sm-10">
-        <%= f.text_field :classification, class: "form-control", autofocus: true %>
+        <%= f.select :classification, options_for_select([['PEGI 3', 'PEGI 3'],
+          ['PEGI 7','PEGI 7'],
+          ['PEGI 12','PEGI 12'],
+          ['PEGI 16','PEGI 16'],
+          ['PEGI 18','PEGI 18']]), class: "form-control", autofocus: true%>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="control-label col-sm-2">
+        <%= f.label :realisateur %>
+      </div>
+
+      <div class="col-sm-10">
+        <%= f.select :realisateur_id, options_for_select(@array_of_noms_realisateurs_ids_realisateurs), class: "form-control", autofocus: true%>
       </div>
     </div>
 
@@ -59,3 +83,6 @@
 
   </div>
 </div>
+
+<script>
+</script>
