--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,8 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Programmes", programmes_path%></li>
         <li><%= link_to "Réalisateurs", realisateurs_path%></li>
+        <li><%= link_to "Chaines", chaines_path%></li>
+        <li><%= link_to "Diffusions", diffusions_path%></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
