--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,14 @@
   margin-top: -20px;
 }
 
+.btn-filter-diffusion{
+  word-spacing: -8px;
+  text-align: right;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  margin-right: -10px;
+}
+
 .btn-add{
   text-align: right;
 }
