--- a/app/views/layouts/_formDiffusion.html.erb
+++ b/app/views/layouts/_formDiffusion.html.erb
@@ -18,7 +18,9 @@
       </div>
 
       <div class="col-sm-10">
-        <%= f.select :programme_id, options_for_select(@array_of_noms_programmes_ids_programmes), class: "form-control", autofocus: true%>
+        <%= f.select :programme_id, options_for_select(@array_of_noms_programmes_ids_programmes), 
+        class: "form-control",
+          autofocus: true%>
       </div>
     </div>
 
