--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,6 @@
     </div>
     <br/>
     <br/>
-    <!-- <%= debug(params) if Rails.env.development? %> -->
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
