--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,10 +20,10 @@
         <li><%= link_to "Diffusions", diffusions_path%></li>
       </ul>
       <form class="navbar-form navbar-right">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <%= form_tag(programmes_path, :method => "get", id: "search-form") do %>
+        <%= text_field_tag :search, params[:search], class: 'form-control' %>
+        <%= submit_tag "Search", class: 'btn btn-default' %>
+        <% end %>
       </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
