--- a/app/views/programmes/show.html.erb
+++ b/app/views/programmes/show.html.erb
@@ -7,14 +7,14 @@
     </div>
 
     <div class="col-sm-6 btn-add">
-      <%= link_to "    Modifier le programme", edit_programme_path(@programme =Programme.find(params[:id])), class: "btn btn-primary glyphicon glyphicon-pencil btn-xlarge"%>
+      <%= link_to "    Modifier le programme", edit_programme_path(@programme), class: "btn btn-primary glyphicon glyphicon-pencil btn-xlarge"%>
     </div>
   </div>
 
 
   <div class="row">
     <div class="col-md-12">
-      <%= form_for @programme =Programme.find(params[:id]), html: {class: "form-horizontal", role: "form"} do |f| %>
+      <%= form_for @programme, html: {class: "form-horizontal", role: "form"} do |f| %>
 
       <div class="form-group">
         <div class="control-label col-sm-2">
@@ -51,11 +51,13 @@
 
       <div class="form-group">
         <div class="control-label col-sm-2">
-          <%= f.label :realisateur %>
+          <%= f.label :realisateur_id %>
         </div>
 
         <div class="col-sm-10">
-          <%= f.text_field :realisateur, value: Realisateur.find(@programme.realisateur_id).nom, class: "form-control", disabled: true %>
+          <%= f.fields_for @realisateur =Realisateur.find(@programme.realisateur_id) do |f_realisateur| %>
+          <%= f_realisateur.text_field :nom, class: "form-control", disabled: true %>
+          <% end %>
         </div>
       </div>
 
