App finished, waiting for styling

--- a/app/views/chaines/show.html.erb
+++ b/app/views/chaines/show.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
   <div class="row">
     <div class="col-sm-6">
-      <h2> Information sur la Chaine</h2>
+      <h2> Information sur la Chaîne</h2>
     </div>
 
     <div class="col-sm-6 btn-add">
