--- a/app/views/diffusions/edit.html.erb
+++ b/app/views/diffusions/edit.html.erb
@@ -84,7 +84,7 @@
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <%= f.submit class: 'btn btn-primary btn-lg' %>
+          <%= f.submit class: 'btn btn-primary btn-lg', value: "Modifier la diffusion" %>
         </div>
       </div>
 
