--- a/app/views/layouts/_formChaine.html.erb
+++ b/app/views/layouts/_formChaine.html.erb
@@ -29,7 +29,7 @@
 
     <% end%>
     <div class="col-xs-offset-4 col-xs-4">
-      [<%= link_to "Tous les chaines", chaines_path %>]
+      [<%= link_to "Tous les chaînes", chaines_path %>]
     </div>
   </div>
 </div>
