--- a/app/views/chaines/index.html.erb
+++ b/app/views/chaines/index.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
   <div class="row">
     <div class="col-sm-6">
-      <h2> Tous les Chaines</h2>
+      <h2> Tous les Chaînes</h2>
     </div>
 
     <div class="col-sm-6 btn-add">
