--- a/app/views/chaines/new.html.erb
+++ b/app/views/chaines/new.html.erb
@@ -1,8 +1,44 @@
 <div class="center jumbotron">
   <div class="row">
     <div class="col-sm-6">
-      <h2> Ajouter une nouvelle Chaine</h2>
+      <h2> Ajouter une nouvelle Chaîne</h2>
     </div>
-</div>
+  </div>
 
-<%= render 'layouts/formChaine' %>
+  <% if @chaine.errors.any? %>
+  <h2> The following errors prevented the chaine from getting created</h2>
+  <ul>
+    <% @chaine.errors.full_messages.each do |msg| %>
+    <li> <%= msg %> </li>
+    <% end%>
+  </ul>
+  <%end%>
+
+  <div class="row">
+    <div class="col-md-12">
+      <%= form_for @chaine, html: {class: "form-horizontal", role: "form"} do |f| %>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :nom %>
+        </div>
+
+        <div class="col-sm-10">
+          <%= f.text_field :nom, class: "form-control", autofocus: true %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= f.submit class: 'btn btn-primary btn-lg', value: "Ajouter la chaîne" %>
+        </div>
+      </div>
+
+      <% end%>
+      <div class="col-xs-offset-4 col-xs-4">
+        [<%= link_to "Tous les chaînes", chaines_path %>]
+      </div>
+    </div>
+  </div>
+
+</div>
