--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Programmes", programmes_path%></li>
         <li><%= link_to "Réalisateurs", realisateurs_path%></li>
-        <li><%= link_to "Chaines", chaines_path%></li>
+        <li><%= link_to "Chaînes", chaines_path%></li>
         <li><%= link_to "Diffusions", diffusions_path%></li>
       </ul>
       <form class="navbar-form navbar-right">
