--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <div class="container">
     <%= yield %>
     </div>
+    <!-- <br/>
     <br/>
-    <br/>
-    <%= debug(params) if Rails.env.development? %>
+    <%= debug(params) if Rails.env.development? %> -->
   </body>
 </html>
