--- a/app/views/realisateurs/edit.html.erb
+++ b/app/views/realisateurs/edit.html.erb
@@ -8,6 +8,41 @@
   </div>
 
 
-<%= render 'layouts/formRealisateur' %>
+  <% if @realisateur.errors.any? %>
+  <h2> The following errors prevented the réalisateur from getting created</h2>
+  <ul>
+    <% @realisateur.errors.full_messages.each do |msg| %>
+    <li> <%= msg %> </li>
+    <% end%>
+  </ul>
+  <%end%>
+
+  <div class="row">
+    <div class="col-md-12">
+      <%= form_for @realisateur, html: {class: "form-horizontal", role: "form"} do |f| %>
+
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :nom %>
+        </div>
+
+        <div class="col-sm-10">
+          <%= f.text_field :nom, class: "form-control", autofocus: true %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= f.submit class: 'btn btn-primary btn-lg', value: "Modifier le réalisateur" %>
+        </div>
+      </div>
+
+      <% end%>
+      <div class="col-xs-offset-4 col-xs-4">
+        [<%= link_to "Tous les réalisateurs", realisateurs_path %>]
+      </div>
+    </div>
+  </div>
+
 
 </div>
