--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -49,6 +49,7 @@
 
 .btn-add{
   text-align: right;
+  padding-right: 5px;
 }
 
 .tb{
@@ -58,4 +59,12 @@
 
 .dropdown{
     text-align: left;
+}
+
+.select_JH{
+  text-align: left;
+}
+
+.select_Fbtn{
+  text-align: left;
 }
