--- a/app/views/diffusions/index.html.erb
+++ b/app/views/diffusions/index.html.erb
@@ -9,52 +9,48 @@
     </div>
   </div>
 
-
-
-
-
-
   <div class="row">
     <div class="col-md-12">
       <%= form_for @diffusion = Diffusion.new,
       html: {class: "form-horizontal", role: "form"} do |f| %>
-
       <div class="form-group">
-        <div class="control-label col-sm-3" style="border: 1px solid black;">
-          <%= f.label :jour %>
+        <div class="col-sm-offset-5 col-sm-4">
+          <div class="row">
+            <div class="control-label col-sm-8" style="border: 0px solid black;">
+              <%= f.label :jour %>
+            </div>
+
+            <div class="col-sm-4 select_JH" style="border: 0px solid black;">
+              <%= f.select :jour, options_for_select(@array_of_jours_jours),
+              html: {class: "form-control test", id: "test", autofocus: true}%>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="control-label col-sm-8" style="border: 0px solid black;">
+              <%= f.label :heure %>
+            </div>
+
+            <div class="col-sm-4 select_JH" style="border: 0px solid black;">
+              <%= f.select :heure, options_for_select(@array_of_heures_heures),
+              class: "form-control test", autofocus: true%>
+            </div>
+          </div>
         </div>
 
-        <div class="col-sm-2" style="border: 1px solid black;">
-          <%= f.select :jour, options_for_select(@array_of_jours_jours), html: {class: "form-control test", id: "test", autofocus: true}%>
+          <div class="col-sm-3 select_Fbtn" style="border: 0px solid black;">
+            <%= link_to "    Filtrer les diffusions",
+            diffusions_path(:jour => "Mercredi", :heure => "11:30"),
+            class: "btn btn-info glyphicon glyphicon-filter btn-filter-diffusion",
+              :onclick => 'get_selected_day()',
+              :id => 'link_to_diffusions'%>
+          </div>
         </div>
-
-        <div class="control-label col-sm-1" style="border: 1px solid black;">
-          <%= f.label :heure %>
-        </div>
-
-        <div class="col-sm-2" style="border: 1px solid black;">
-          <%= f.select :heure, options_for_select(@array_of_heures_heures), class: "form-control test", autofocus: true%>
-        </div>
-
-        <div class="col-sm-offset-1 col-sm-2" style="border: 1px solid black;">
-          <%= link_to "    Filtrer les diffusions",
-          diffusions_path(:jour => "Mercredi", :heure => "11:30"),
-          class: "btn btn-info glyphicon glyphicon-filter btn-filter-diffusion",
-            :onclick => 'get_selected_day()',
-            :id => 'link_to_diffusions'%>
-          <!-- <button onclick="get_selected_day()">Try it</button> -->
-          <!-- <%= f.submit class: 'btn btn-info glyphicon glyphicon-filter btn-filter-diffusion' %> -->
-        </div>
-      </div>
-
-
-      <div class="form-group">
-
-      </div>
-
       <% end%>
     </div>
   </div>
+
+
 
 <table class="table tb">
   <thead>
