--- a/app/views/diffusions/index.html.erb
+++ b/app/views/diffusions/index.html.erb
@@ -51,6 +51,13 @@
   </div>
 
 
+  <div class="row">
+    <div align="center">
+      <%= will_paginate %>
+    </div>
+  </div>
+
+
 
 <table class="table tb">
   <thead>
