--- a/app/views/programmes/index.html.erb
+++ b/app/views/programmes/index.html.erb
@@ -11,6 +11,14 @@
 
 
 
+  <div class="row">
+    <div align="center">
+      <%= will_paginate %>
+    </div>
+  </div>
+
+
+
 <table class="table tb">
   <thead>
     <tr>
