--- a/app/views/realisateurs/index.html.erb
+++ b/app/views/realisateurs/index.html.erb
@@ -7,7 +7,12 @@
     <div class="col-sm-6 btn-add">
       <%= link_to "    Ajouter un nouvel réalisateur", new_realisateur_path, class: "btn btn-primary glyphicon glyphicon-plus btn-xlarge"%>
     </div>
-</div>
+  </div>
+
+
+  <div align="center">
+    <%= will_paginate %>
+  </div>
 
 <table class="table tb">
   <thead>
